Make NetexIdUniquenessValidator configurable (#93)